logs/Slang/chapter-8/8.19--instance_constant.sv.log
name: instance_constant
description: class with instance constant variable
should_fail: 0
tags: 8.19
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.19--instance_constant.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.19--instance_constant.sv:8:2: error: language feature not yet supported
	class a_cls;
	^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.19--instance_constant.sv:10:11: error: expected identifier
		function new(int val);
		        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.19--instance_constant.sv:10:12: error: expected statement
		function new(int val);
		         ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.19--instance_constant.sv:10:23: error: expected declarator
		function new(int val);
		                    ^
